# wax-ml

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE_SHORT  MANIFEST.in  Makefile  README.md  WEP.md  codecov.yml  setup.cfg  setup.py
.github/workflows/: docs.yml  main.yml  pypi.yml  tests.yml
docs/: Makefile  conf.py  developer.md  index.rst  requirements.txt  wax.datasets.rst  wax.gym.rst  wax.modules.rst  wax.rst  wax.universal.rst
docs/img/: Makefile
docs/notebooks/: 01_demo_EWMA.ipynb  01_demo_EWMA.md  01_demo_EWMA.py  02_Synchronize_data_streams.ipynb  02_Synchronize_data_streams.md  02_Synchronize_data_streams.py  03_ohlc_temperature.ipynb  03_ohlc_temperature.md  03_ohlc_temperature.py  04_The_three_steps_workflow.ipynb  04_The_three_steps_workflow.md  04_The_three_steps_workflow.py  05_reconstructing_the_light_curve_of_stars.ipynb  05_reconstructing_the_light_curve_of_stars.md  05_reconstructing_the_light_curve_of_stars.py  06_Online_Linear_Regression.ipynb  06_Online_Linear_Regression.md  06_Online_Linear_Regression.py  07-SNARIMAX.ipynb  07-SNARIMAX.md  07-SNARIMAX.py  07_Online_Time_Series_Prediction.ipynb  07_Online_Time_Series_Prediction.md  07_Online_Time_Series_Prediction.py  08_Online_learning_in_non_stationary_environments.ipynb  08_Online_learning_in_non_stationary_environments.md  08_Online_learning_in_non_stationary_environments.py  09_EWMA_options.ipynb  09_EWMA_options.md  09_EWMA_options.py  Makefile
docs/tikz/: .gitignore  agent.tex  agent_env.tex  env.tex  gymfeedback.tex  gymfeedback_apply.tex  gymfeedback_init.tex  gymfeedback_init_apply.tex  module_with_state.tex
wax/: __init__.py  accessors.py  accessors_test.py  compile.py  encode.py  encode_test.py  format.py  format_test.py  predicate.py  stateful.py  stateful_test.py  stream.py  stream_test.py  testing.py  transform.py  unroll.py  unroll_test.py  utils.py
wax/datasets/: __init__.py  generate_temperature_data.py  generate_temperature_data_test.py
wax/gym/: agent.py  agent_test.py  entity.py  env.py  env_test.py  gym_unroll.py  haiku_agent.py  haiku_env.py  haiku_env_test.py
wax/gym/callbacks/: __init__.py  callbacks.py  callbacks_test.py  progressbar.py  record.py  stop.py
wax/modules/: __init__.py  apply_mask.py  apply_mask_test.py  arma.py  arma_test.py  buffer.py  buffer_test.py  counter.py  counter_test.py  diff.py  diff_test.py  ewma.py  ewma_numba.py  ewma_numba_test.py  ewma_test.py  ewmcov.py  ewmcov_test.py  ewmvar.py  ewmvar_test.py  ffill.py  ffill_test.py  fill_nan_inf.py  fill_nan_inf_test.py  func_optimizer.py  func_optimizer_test.py  gym_feedback.py  gym_feedback_test.py  has_changed.py  lag.py  lag_test.py  mask_mean.py  mask_mean_test.py  mask_normalize.py  mask_normalize_test.py  mask_std.py  mask_std_test.py  ohlc.py  ohlc_test.py  online_optimizer.py  online_supervised_learner.py  (+15 more)
wax/numba/: ewma_numba.py  ewma_numba_test.py
wax/optim/: __init__.py  newton.py  newton_test.py
wax/universal/: __init__.py  eager_ewma.py  eager_ewma_test.py
