[bumpversion]
current_version = 0.0.4
commit = True
tag = True

[metadata]
name = wax-ml
version = attr: wax.__version__
author = WAX Authors
author_email = eserie@gmail.com
license = Apache
description = Machine learning for streaming data
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/eserie/wax-ml
keywords =
    time series
    machine learning
    optimization
    optimal control
    online learning
	reinforcement learning
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering

[options]
packages = find_namespace:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
install_requires =
    numpy
    pandas
    xarray
    scikit-learn
    tqdm
    jaxlib>=0.1.67
    jax
    dm-haiku >= 0.0.4
    flax
    optax
    eagerpy @ git+https://github.com/eserie/eagerpy.git@dev
    dataclasses
    pooch
    cftime

[options.extras_require]
optional =
    torch
    torchvision
    tensorflow-datasets
    tensorflow>=2.4.0
    optax
    plotnine
    pyarrow

dev =
	mypy
	ipykernel
	ipywidgets
	nbconvert
	pytest
	pytest-cov
	pytest-xdist
	pytest-benchmark
	flaky
	coverage
	flake8
	autopep8
	autoflake
	black
	isort>=5.3.0
	jupytext==1.11.1
	papermill
	line_profiler

complete =
    %(optional)s
    %(dev)s

docs =
    %(complete)s
    sphinx
	sphinxcontrib-napoleon
	sphinx_rtd_theme
    sphinx-autosummary-accessors
    ipython
    ipykernel
    jupyter-client
    nbsphinx
    scanpydoc

[options.package_data]
wax =
    py.typed
    tests/data/*
    static/css/*
    static/html/*

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    # E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    # E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    C901 # code is too complex
select = B,C,E,F
max-line-length = 100
max-complexity = 15
exclude = docs

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = wax

[run]
omit =
	setup.py

[report]
exclude_lines =
	@abstractmethod
	raise NotImplementedError

[pylint]
load-tests =
	pylint.extensions.docparams,
	pylint.extensions.docstyle
disable =
	fixme,
	bad-continuation

[aliases]
test=pytest

[pytest]

filterwarnings =
    ignore:No GPU/TPU found, falling back to CPU.:UserWarning
    ignore:outfeed_receiver is unnecessary and deprecated:DeprecationWarning
    # xmap
    ignore:xmap is an experimental feature and probably has bugs!
    # The rest are for experimental/jax_to_tf
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    #ignore:can't resolve package from __spec__ or __package__:ImportWarning
    ignore:Using or importing the ABCs.*:DeprecationWarning
    # jax2tf tests due to mix of JAX and TF
    ignore:numpy.ufunc size changed
    ignore:.*experimental feature
    ignore:SelectableGroups dict interface is deprecated. Use select
    error
    ignore::DeprecationWarning

doctest_optionflags = NUMBER NORMALIZE_WHITESPACE
addopts = --doctest-glob="*.rst"
[tool:pytest]
# python_files = test_*.py
# testpaths = wax/tests properties
# Fixed upstream in https://github.com/pydata/bottleneck/pull/199
# filterwarnings =
#     ignore:Using a non-tuple sequence for multidimensional indexing is deprecated:FutureWarning
markers =
    flaky: flaky tests
    network: tests requiring a network connection
    slow: slow tests

[coverage:run]
omit =
    setup.py
    conf.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError
    except ImportError

[mypy]
show_error_codes = True
disable_error_code = attr-defined

[mypy-haiku.*]
ignore_missing_imports = True
[mypy-tensorflow.*]
ignore_missing_imports = True
[mypy-wax.modules.ewma.*]
ignore_missing_imports = True
[mypy-wax.modules.gym_feedback.*]
ignore_missing_imports = True
[mypy-sklearn.*]
ignore_missing_imports = True
[mypy-tqdm.*]
ignore_missing_imports = True
[mypy-xarray.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-absl.*]
ignore_missing_imports = True
[mypy-jaxlib.*]
ignore_missing_imports = True
ignore_errors = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-opt_einsum.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-jax.interpreters.autospmd]
ignore_errors = True
[mypy-jax.lax.lax_parallel]
ignore_errors = True
[mypy-jax.experimental.jax2tf.tests.primitive_harness]
ignore_errors = True
